<resources>
    <string name="app_name">EventDicoding</string>

    <string name="title">Judul</string>
    <string name="title_activity_home_navigation">home_navigation</string>
    <string name="upcoming">Upcoming</string>
    <string name="finished">Finished</string>
    <string name="favorite">Favorite</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_favorite">Favorite</string>

    <string name="owner">Penyelenggara</string>
    <string name="date">Tanggal</string>
    <string name="quota">Sisa Kuota</string>
    <string name="description">Deskripsi</string>

    <string name="register">Register</string>

    <string name="save_bookmark">Save Bookmark?</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="dark_mode">Dark Mode</string>
    <string name="setting">Setting</string>
</resources>