<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.eventdicoding.ui.ui.home.HomeFragment"
        android:label="@string/upcoming"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.eventdicoding.ui.ui.dashboard.DashboardFragment"
        android:label="@string/finished"
        tools:layout="@layout/fragment_dashboard" />
    <fragment
        android:id="@+id/navigation_favorite"
        android:name="com.example.eventdicoding.ui.ui.favorite.FavoriteFragment"
        android:label="@string/favorite"
        tools:layout="@layout/fragment_favorite" />

    <fragment
        android:id="@+id/navigation_setting"
        android:name="com.example.eventdicoding.ui.ui.setting.SettingFragment"
        android:label="@string/setting"
        tools:layout="@layout/fragment_setting" />

</navigation>